tests/whiley/invalid/test_59.wyal
type irf2nat is (int x)
where:
    x > 0


assert "type invariant not satisfied":
    forall(int x):
        if:
            true
        then:
            x is irf2nat


